<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <Button
        android:id="@+id/btnCalling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calling"/>

    <EditText
        android:id="@+id/editWebSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/web_site"/>

    <Button
        android:id="@+id/btnWebSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_web_site"/>

</LinearLayout>
