<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.erickgarcia.sesion4intentbroadcast.MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_tittle"
        android:textSize="40sp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnExplicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/explicit_intent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/btnImplicit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:text="@string/implicit_intent"
        android:layout_below="@+id/btnExplicit"/>

</RelativeLayout>
